# esbm42

./: .gitignore  README.md  bm42.ipynb  docker-compose.yml  eskeeper.yml  mapping.json  pyproject.toml  sudachi.json
