[tool.poetry]
name = "esbm42"
version = "0.1.0"
description = ""
authors = ["Hiromu Nakamura <hiromu-nakamura@m3.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.3"
torch = "2.2.1"
fugashi = "^1.4.0"
unidic-lite = "^1.0.8"
elasticsearch = "^8.16.0"
yasem = "^0.3.2"
qdrant-client = "^1.12.1"
sudachipy = "^0.6.9"
sudachidict-core = "^20241021"
pydatrie = "^0.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
